fixed some loc and removed randomness from czech acceptance

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1774,7 +1774,7 @@ EVTDESC999365;The ongoing French demonstrations of 1848 and the uprising in Vien
 EVTNAME999365;Uprising in Berlin;;;;;;;;;;;;;x
 EVTOPTA999365;No, they started it.;;;;;;;;;;;;;x
 EVTOPTB999365;Yes, but make empty promises.;;;;;;;;;;;;;x
-EVTOPTC999365;Yes, implement some demands.;;;;;;;;;;;;;x
+EVTOPTC999365;Yes, but only implement some demands.;;;;;;;;;;;;;x
 EVTOPTD999365;Yes, accept their demands.;;;;;;;;;;;;;x
 EVTDESC999366;The French revolution of 1848 and the various uprisings and protests in Germany, which where inspired by the former, have led to a group of German liberals began to make plans for an election to a German national assembly. This assembly meet for the first time on March 31, in Frankfurt's St. Paul's Church. It purpose, as stated by the members, is for a free elections to an assembly for all of Germany. What shall we do about it?;;;;;;;;;;;;;x
 EVTNAME999366;Frankfurt National Assembly;;;;;;;;;;;;;x
@@ -1783,17 +1783,17 @@ EVTOPTB999366;Stay silent.;;;;;;;;;;;;;x
 EVTOPTC999366;Stop this at once!;;;;;;;;;;;;;x
 EVTDESC999367;The Frankfurt assembly, now getting into full swing, has led to the rise of various factions between 400 delegates in the total number of delegates counted at 586. Due to us having send our own, we are in a position to influence the course of discussions to our favor, if we so desire. The biggest factions are the Casino-Landsberg faction (120 member and 40 members respectively of the Center/Center-Right/Liberal/Liberal-Conservative), Württembergerhof faction (100 members of the Left-Center), and the Deutscherhof-Donnersberg faction (60 member and 40 members respectively of the Left/Far-Left/Liberal-Democrats/Democrats). The later two have been outspoken about the need for a united Greater Germany.;;;;;;;;;;;;;x
 EVTNAME999367;Supporting Faction in Frankfurt Assembly;;;;;;;;;;;;;x
-EVTOPTA999367;Support no Faction.;;;;;;;;;;;;;x
+EVTOPTA999367;Do not support a faction.;;;;;;;;;;;;;x
 EVTOPTB999367;Support Casino-Landsberg.;;;;;;;;;;;;;x
 EVTOPTC999367;Support Württembergerhof.;;;;;;;;;;;;;x
 EVTOPTD999367;Support Deutscherhof-Donnersberg.;;;;;;;;;;;;;x
 EVTDESC999368;The people of Vienna have taken to the streets once again, protesting against our actions against the Hungarians in our empire. The resulting uproar resulted in our Emperor Ferdinand I to flee Vienna shortly after, feeling to Olomouc/Olmütz in Moravia. Seeing his frequent failures as Emperor, it is only a matter of time before he abdicates.;;;;;;;;;;;;;x
 EVTNAME999368;Vienna Uprising of October 1848;;;;;;;;;;;;;x
-EVTOPTA999368;Blast;;;;;;;;;;;;;x
-EVTDESC999369;We have just recieved the news that another vienna uprising has happened just the day prior, which saw the Austrian Emperor flee the city. These protest have accured due to the Emperor actions against the Hungarians in the Empire. Seeing that the government is occupied with the protests and the Emperor gone, for now, have the option to silently support this little rebellion to further our own causes, if so desired.;;;;;;;;;;;;;x
+EVTOPTA999368;Blast!;;;;;;;;;;;;;x
+EVTDESC999369;We have just recieved the news that another uprising in Vienna has happened just the day prior, which saw the Austrian Emperor flee the city. These protest have accured due to the Emperor actions against the Hungarians in the Empire. Seeing that the government is occupied with the protests and the Emperor gone for now, we have the option to silently support this little rebellion to further our own causes - if so desired.;;;;;;;;;;;;;x
 EVTNAME999369;Vienna Uprising of October 1848;;;;;;;;;;;;;x
-EVTOPTA999369;No, we shan't!;;;;;;;;;;;;;x
-EVTOPTB999369;Yes, we shall!;;;;;;;;;;;;;x
+EVTOPTA999369;Revolution is like the plague - let the Austrians crush it.;;;;;;;;;;;;;x
+EVTOPTB999369;This is too good a chance to pass up!;;;;;;;;;;;;;x
 EVTDESC999370;The ongoing debates in Frankfurt have finished and a new constitution for a united Germany has been finalized, with a Left victory, partly due to our influence. It may be of concern, as the constitution, based in part of the American one, does not mention the position of a Prince/King/Emperor, but does mention a Republic several times.;;;;;;;;;;;;;x
 EVTNAME999370;Paulskirchenverfassung Left Victory;;;;;;;;;;;;;x
 EVTOPTA999370;Wait, what?;;;;;;;;;;;;;x
@@ -1808,7 +1808,7 @@ EVTNAME999373;Paulskirchenverfassung;;;;;;;;;;;;;x
 EVTOPTA999373;Bah!;;;;;;;;;;;;;x
 EVTDESC999374;Your highness, the Frankfurt National Assembly has finally voted for a unified German nation. Her representatives are proposing that you shall become ‘Kaiser der Deutschen’, the head of state of Germany, and have offered you the crown of this new nation.;;;;;;;;;;;;;x
 EVTNAME999374;Kaiser der Deutschen;;;;;;;;;;;;;x
-EVTOPTA999374;A crown from the gutter? Certainly not!;;;;;;;;;;;;;x
+EVTOPTA999374;A Crown from the Gutter? Certainly not!;;;;;;;;;;;;;x
 EVTDESC999375;Your highness, with our support for the Frankfurt National Assembly, the day has finally come for the unification of Germany. Her representatives are proposing that you shall become ‘Kaiser der Deutschen’, the head of state of Germany, and have offered you the crown of this new nation.;;;;;;;;;;;;;x
 EVTNAME999375;Kaiser der Deutschen;;;;;;;;;;;;;x
 EVTOPTA999375;We accept, for the glory of our house...of Germany!;;;;;;;;;;;;;x
@@ -1828,18 +1828,18 @@ EVTOPTA999379;We accept their demands.;;;;;;;;;;;;;x
 EVTOPTB999379;Warn them that we will put a stop this!;;;;;;;;;;;;;x
 EVTDESC999380;We have recieved the news that Copenhagen has accepted our plea to the right to find our own course, which lies to our German nations to the south to us.;;;;;;;;;;;;;x
 EVTNAME999380;Copenhagen Accepts;;;;;;;;;;;;;x
-EVTOPTA999380;The generousity of Denmark shan't be forgotten!;;;;;;;;;;;;;x
-EVTDESC999381;We have recieved the news that Copenhagen has rejected our plea to the right to find our own course, which lies to our German nations to the south to us. It is now up to us to back down or fight for the right to find our destiny!;;;;;;;;;;;;;x
+EVTOPTA999380;The generosity of Denmark shall not be forgotten!;;;;;;;;;;;;;x
+EVTDESC999381;We have recieved the news that Copenhagen has rejected our plea to allow us to find our own course, - which lies with the German nations to the south to us. It is now up to us to back down or fight for the right to find our destiny!;;;;;;;;;;;;;x
 EVTNAME999381;Copenhagen Refuses;;;;;;;;;;;;;x
-EVTOPTA999381;Onwards to victory! Call in Prussia too!;;;;;;;;;;;;;x
-EVTOPTB999381;Better not anger them.;;;;;;;;;;;;;x
-EVTDESC999382;Our rejection of Schleswig-Holsteiner independence was not taken kindly, the Schleswig-Holsteiner savages have taken it upon themselves to attack our fortress in Rendsborg/Rendsburg. We must prepare our attack. We have also heard the news that they are seeking an alliance with the Prussians.;;;;;;;;;;;;;x
+EVTOPTA999381;Onwards to victory! Call in the Prussians!;;;;;;;;;;;;;x
+EVTOPTB999381;Better to not anger them.;;;;;;;;;;;;;x
+EVTDESC999382;Our rejection of Schleswig-Holsteiner independence was not taken kindly - the Schleswig-Holsteiner savages have taken it upon themselves to attack our fortress in Rendsborg/Rendsburg. We must prepare our attack. We have also heard the news that they are seeking an alliance with the Prussians.;;;;;;;;;;;;;x
 EVTNAME999382;Schleswig-Holstein Declares War;;;;;;;;;;;;;x
-EVTOPTA999382;To Victory!;;;;;;;;;;;;;x
-EVTDESC999383;The general uproars of the 1848 revolutions have spread to Schleswig-Holstein, which have taken it upon themselves to fight back against their oppressors in Copenhagen. Their envoys have arrived today seeking an alliance against the Danes. Joining them would certainly agner the other Great Powers.;;;;;;;;;;;;;x
+EVTOPTA999382;To victory!;;;;;;;;;;;;;x
+EVTDESC999383;The general uproar of the 1848 revolutions have spread to Schleswig-Holstein, which have taken it upon themselves to fight back against their oppressors in Copenhagen. Their envoys have arrived today seeking an alliance against the Danes. Joining them would certainly anger the other Great Powers.;;;;;;;;;;;;;x
 EVTNAME999383;Schleswig-Holsteiner Plea for Help;;;;;;;;;;;;;x
 EVTOPTA999383;Of course, they are our brethren!;;;;;;;;;;;;;x
-EVTOPTB999383;Better not anger the other Great Powers.;;;;;;;;;;;;;x
+EVTOPTB999383;Better to not anger the other Great Powers.;;;;;;;;;;;;;x
 EVTDESC999384;It has come to our attention that Denmark, Schleswig-Holstein, and Prussia are at war over the Schleswig-Holstein territory. Seeing that a Prussian victory would significantly weaken Denmark, our cabinet has advised us to take action against Prussia.;;;;;;;;;;;;;x
 EVTNAME999384;Schleswig-Holstein War;;;;;;;;;;;;;x
 EVTOPTA999384;Yes, support the Danes!;;;;;;;;;;;;;x
@@ -1865,25 +1865,25 @@ EVTDESC999390;Diplomats from the newly formed German nation to our North have ar
 EVTNAME999390;The Greater German Question;;;;;;;;;;;;;x
 EVTOPTA999390;Tell them that Germany shall be united!;;;;;;;;;;;;;x
 EVTOPTB999390;Tell them that Austria is not Germany!;;;;;;;;;;;;;x
-EVTDESC999391;The Austrian Empire has accepted our proposal for a enternal union between Germany and Austria. Thus, we have finally achieved the revolutions goals!;;;;;;;;;;;;;x
+EVTDESC999391;The Austrian Empire has accepted our proposal for a enternal union between Germany and Austria. Thus, we have finally achieved the revolution's goals!;;;;;;;;;;;;;x
 EVTNAME999391;Austro-German Unity;;;;;;;;;;;;;x
 EVTOPTA999391;Huzzah!;;;;;;;;;;;;;x
-EVTDESC999392;We have gotten the news that Austria has accepted the unification with the new German state, which will greatly upset the balance of power so sought after in the Concert of Europe. The state is as of right now very weak, thus if we wish to stop them, now is the time to strike!;;;;;;;;;;;;;x
+EVTDESC999392;We have gotten the news that Austria has accepted the unification with the new German state, which will greatly upset the balance of power so sought after in the Concert of Europe. The state is as of right now very weak - thus if we wish to stop them, now is the time to strike!;;;;;;;;;;;;;x
 EVTNAME999392;The Greater German Problem;;;;;;;;;;;;;x
 EVTOPTA999392;We have better things to do!;;;;;;;;;;;;;x
 EVTOPTB999392;Yes, demand Galicia!;;;;;;;;;;;;;x
-EVTOPTC999392;Yes, demand Galicia/Posen!;;;;;;;;;;;;;x
-EVTOPTD999392;Yes, demand Galicia/Pre-unification borders!;;;;;;;;;;;;;x
+EVTOPTC999392;Yes, demand Galicia and Posen!;;;;;;;;;;;;;x
+EVTOPTD999392;Yes, demand Galicia and that they release all lands outside of the Confederation!;;;;;;;;;;;;;x
 EVTOPTE999392;Yes, declare war we must restore order!;;;;;;;;;;;;;x
 EVTDESC999393;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled for annexation of Austria, demands concessions from us. The concessions are to be of the lands in Galicia, though they are not under our control, would mean that the Russians have access to Hungary. This would limit our expansion there as we still have potential claims there. Refusal to these demands will result in war!;;;;;;;;;;;;;x
 EVTNAME999393;Russians Demand Galicia;;;;;;;;;;;;;x
-EVTOPTA999393;Accept the demands.;;;;;;;;;;;;;x
+EVTOPTA999393;We must accept.;;;;;;;;;;;;;x
 EVTOPTB999393;Come and get it!;;;;;;;;;;;;;x
-EVTDESC999394;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled for annexation of Austria, demands concessions from us. The concessions are to be of the lands in Galicia and Posen, though the former is not under our control, would mean that the Russians have access to Hungary and the loss the large grain producing region of Posen. Refusal to these demands will result in war!;;;;;;;;;;;;;x
+EVTDESC999394;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled for annexation of Austria, demands concessions from us. The concessions are to be of the lands in Galicia and Posen, though the former is not under our control, would mean that the Russians have access to Hungary and the loss of the large grain-producing region of Posen. Refusal to these demands will result in war!;;;;;;;;;;;;;x
 EVTNAME999394;Russians Demand Galicia and Posen;;;;;;;;;;;;;x
 EVTOPTA999394;Accept the demands.;;;;;;;;;;;;;x
 EVTOPTB999394;Come and get it!;;;;;;;;;;;;;x
-EVTDESC999395;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled for annexation of Austria, demands concessions from us. The concessions are to be of the lands in Galicia and the all the lands not part of the confederation, pre unification. This would cost us dearly in power and would give the Russians a clear access road into Europe. Refusal to these demands will result in war!;;;;;;;;;;;;;x
+EVTDESC999395;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled for annexation of Austria, demands concessions from us. The concessions are to be of the lands in Galicia and all the lands not part of the confederation, pre-unification. This would cost us dearly in power and would give the Russians a clear access road into Europe. Refusal to these demands will result in war!;;;;;;;;;;;;;x
 EVTNAME999395;Russians Demand Pre-Confederation Borders;;;;;;;;;;;;;x
 EVTOPTA999395;Accept the demands.;;;;;;;;;;;;;x
 EVTOPTB999395;Come and get it!;;;;;;;;;;;;;x
@@ -1898,17 +1898,17 @@ EVTNAME999398;German Refusal of Demands;;;;;;;;;;;;;x
 EVTOPTA999398;URA! URA! Next stop Berlin!;;;;;;;;;;;;;x
 EVTDESC999399;The annexation of Austria has lead to a concern of the very large and prominent Czech population in our realm. Some of the delegates have suggested we invite Frantisek Palacky, a Czech nationalist, to attend our parliament to see if we can work out a compromise to ensure Czech loyalty.;;;;;;;;;;;;;x
 EVTNAME999399;The Czech Question;;;;;;;;;;;;;x
-EVTOPTA999399;No, we will not invite him. This is Germany, not the Kingdom Bohemia after all!;;;;;;;;;;;;;x
-EVTOPTB999399;Yes, we will, better offer a few concessions than have revolts.;;;;;;;;;;;;;x
+EVTOPTA999399;No, we will not invite him. This is Germany, not the Kingdom of Bohemia!;;;;;;;;;;;;;x
+EVTOPTB999399;Yes, we will - better a few concessions than outright revolt.;;;;;;;;;;;;;x
 EVTDESC999400;It has come to our attention that Austria has the offer to join the German Confederation, with the discussions breaking down and getting heated. This included the breakdown of diplomatic language as well, with both sides hurling insults at each other.;;;;;;;;;;;;;x
 EVTNAME999400;Austria Refuses Anschluss;;;;;;;;;;;;;x
 EVTOPTA999400;They know what this means.;;;;;;;;;;;;;x
 EVTDESC999401;The brief unification of Germany saw the German people coming together after centuries of being apart, however, it was not to last. Having upset the balance of power too much the Russian state saw to restore order on its terms. Germany is lost.;;;;;;;;;;;;;x
 EVTNAME999401;The treaty of Frankfurt $YEAR$;;;;;;;;;;;;;x
 EVTOPTA999401;Ade nun ade herzst liebste mein.;;;;;;;;;;;;;x
-EVTDESC999402;Despite having been outnumber and outmatched by Russia and its allies, the new German nation has emerged victorious.;;;;;;;;;;;;;x
+EVTDESC999402;Despite being outnumbered and outmatched by Russia and its allies, the new German nation has emerged victorious.;;;;;;;;;;;;;x
 EVTNAME999402;The German Miracle;;;;;;;;;;;;;x
-EVTOPTA999402;We have shown Europe our Power!;;;;;;;;;;;;;x
+EVTOPTA999402;We have shown Europe our power!;;;;;;;;;;;;;x
 EVTDESC999403;Despite our best attemps we have lost the fight against Germany, we are now forced to accept unification. Our realm will be divided according to Germany's wishes.;;;;;;;;;;;;;x
 EVTNAME999403;The Collapse of Austria;;;;;;;;;;;;;x
 EVTOPTA999403;Austria is Lost.;;;;;;;;;;;;;x
