some changes and bugfixes to germany and france

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1766,10 +1766,10 @@ EVTOPTC999065;We will not reform the slavery laws.;;;;;;;;;;;;;x
 EVTDESC999101;The United Kingdom and her Dominions are to be autonomous Communities within the British Empire, equal in status, in no way subordinate one to another in any aspect of their domestic or external affairs, though united by a common allegiance to the Crown, and freely associated as members of the British Commonwealth of Nations.\n \n The Imperial Conference of $YEAR$ accepted the growing political and diplomatic independence of the Dominions in the years after the Great War. It also recommended that the governors-general, the representatives of the King who acted for the Crown as de facto head of state in each dominion, should no longer also serve automatically as the representative of the British government in diplomatic relations between the countries. In following years, High Commissioners were gradually appointed, whose duties were soon recognised to be virtually identical to those of an ambassador.;;;;;;;;;;;;;x
 EVTNAME999101;Imperial Conference of $YEAR$;;;;;;;;;;;;;x
 EVTOPTA999101;This can only be good for the empire;;;;;;;;;;;;;x
-EVTDESC999364;Inspired by the French street demostration, from February 22 through 24, 1848, the people of Vienna have taken likewise to the streets to demand radical reform and change. Some radicals calling for the right to vote and to possible unification of Germany. The resignation of Prince von Metternich as chief minister to Emperor seems likely.;;;;;;;;;;;;;x
+EVTDESC999364;Inspired by the French street demostration, from February 22 through 24, 1848, the people of Vienna have taken likewise to the streets to demand radical reform and change. Some radicals are even calling for the right to vote and the unification of Germany. The resignation of Prince von Metternich as chief minister to the Emperor seems likely.;;;;;;;;;;;;;x
 EVTNAME999364;Märzrevolution;;;;;;;;;;;;;x
 EVTOPTA999364;Blast.;;;;;;;;;;;;;x
-EVTOPTB999364;Give into demands.;;;;;;;;;;;;;x
+EVTOPTB999364;Give into their demands.;;;;;;;;;;;;;x
 EVTDESC999365;The ongoing French demonstrations of 1848 and the uprising in Vienna have caused the people of Berlin to demand the same reforms so sought after. The army has already stepped in to stop these protests, however, they also charged at group of people returning from a meeting in the Tiergarten, leaving one person dead and many injured. The protestors demand that you, your majesty, Frederick William, adress them, with the hope that their demands are meet.;;;;;;;;;;;;;x
 EVTNAME999365;Uprising in Berlin;;;;;;;;;;;;;x
 EVTOPTA999365;No, they started it.;;;;;;;;;;;;;x
@@ -1797,10 +1797,10 @@ EVTOPTB999369;This is too good a chance to pass up!;;;;;;;;;;;;;x
 EVTDESC999370;The ongoing debates in Frankfurt have finished and a new constitution for a united Germany has been finalized, with a Left victory, partly due to our influence. It may be of concern, as the constitution, based in part of the American one, does not mention the position of a Prince/King/Emperor, but does mention a Republic several times.;;;;;;;;;;;;;x
 EVTNAME999370;Paulskirchenverfassung Left Victory;;;;;;;;;;;;;x
 EVTOPTA999370;Wait, what?;;;;;;;;;;;;;x
-EVTDESC999371;The ongoing debates in Frankfurt have finished and a new constitution for a united Germany has been finalized, with a Center victory, partly due to our influence. The constitution is based partly on the British model and would position the King/Emperor as head of state, but with limited by a strong constitution.;;;;;;;;;;;;;x
+EVTDESC999371;The ongoing debates in Frankfurt have finished and a new constitution for a united Germany has been finalized, with a Center victory, partly due to our influence. The constitution is based partly on the British model and would position the King/Emperor as head of state, but limited by a strong constitution.;;;;;;;;;;;;;x
 EVTNAME999371;Paulskirchenverfassung Center Victory;;;;;;;;;;;;;x
 EVTOPTA999371;Huzzah!;;;;;;;;;;;;;x
-EVTDESC999372;The ongoing debates in Frankfurt have finished and a new constitution for a united Germany has been finalized, with a Center-Right victory, partly due to our influence. The constitution is based partly on the British model and would position the King/Emperor as head of state, but with limited by a strong constitution.;;;;;;;;;;;;;x
+EVTDESC999372;The ongoing debates in Frankfurt have finished and a new constitution for a united Germany has been finalized, with a Center-Right victory, partly due to our influence. The constitution is based partly on the British model and would position the King/Emperor as head of state, but limited by a strong constitution.;;;;;;;;;;;;;x
 EVTNAME999372;Paulskirchenverfassung Center-Right Victory;;;;;;;;;;;;;x
 EVTOPTA999372;Huzzah!;;;;;;;;;;;;;x
 EVTDESC999373;The ongoing debates in Frankfurt, with us having been on the side lines, have come up with a new constitution for a potentialy united Germany. The King/Emperor of this new nation would have his power significantly reduced though.;;;;;;;;;;;;;x
@@ -1815,10 +1815,10 @@ EVTOPTA999375;We accept, for the glory of our house...of Germany!;;;;;;;;;;;;;x
 EVTDESC999376;Your highness, with our support for the Frankfurt National Assembly, the day has finally come for the unification of Germany. Her representatives are proposing that you shall become ‘Kaiser der Deutschen’, the head of state of Germany, and have offered you the crown of this new nation.;;;;;;;;;;;;;x
 EVTNAME999376;Kaiser der Deutschen;;;;;;;;;;;;;x
 EVTOPTA999376;We accept, for the glory of our house...of Germany!;;;;;;;;;;;;;x
-EVTDESC999377;Your highness, it has come to our attention that with our support for the Left and Far-Left at the Frankfurt Assembly, their faction was able to implant the seeds of revolution. The police has been overwhelmed, most trupps have defected, and the palace is about to be stormed. The revolution has succeeded.;;;;;;;;;;;;;x
+EVTDESC999377;Your Highness, it has come to our attention that with our support for the Left and Far-Left at the Frankfurt Assembly, their faction was able to implant the seeds of revolution. The police has been overwhelmed, most troops have defected, and the palace is about to be stormed. The revolution has succeeded.;;;;;;;;;;;;;x
 EVTNAME999377;The German Republic;;;;;;;;;;;;;x
 EVTOPTA999377;The King is dead, long live the Republic.;;;;;;;;;;;;;x
-EVTDESC999378;The French revolution and the German revolution taking place right now, has inspired many Schleswig-Holsteiners to seek out self determination, with most seeking a union with our German cousins to the south. Therefore, it has been proposed to send out a deputation to Copenhagen to demand the recognition that our joint nations part ways and that we join the German Confederation on our own terms.;;;;;;;;;;;;;x
+EVTDESC999378;The Revolutions of 1848 have inspired many Schleswig-Holsteiners to seek self determination, with most seeking a union with our German cousins to the south. Therefore, it has been proposed to send a deputation to Copenhagen to demand that they recognize our independence and allow us to join the German Confederation on our own terms.;;;;;;;;;;;;;x
 EVTNAME999378;Deputation to Copenhagen;;;;;;;;;;;;;x
 EVTOPTA999378;Yes, do so at once!;;;;;;;;;;;;;x
 EVTOPTB999378;Abandoning Denmark? Never!;;;;;;;;;;;;;x
@@ -1846,7 +1846,7 @@ EVTOPTA999384;Yes, support the Danes!;;;;;;;;;;;;;x
 EVTOPTB999384;No, we have better things to attend too!;;;;;;;;;;;;;x
 EVTDESC999385;The ongoing war in Denmark has sparked the attention of the other Great Powers and even Sweden, with some seeking to support them and threatening that if we do not stop our aggression that they will intervene!;;;;;;;;;;;;;x
 EVTNAME999385;Great Powers Support Denmark!;;;;;;;;;;;;;x
-EVTOPTA999385;The Prussian Eagle does not back down!;;;;;;;;;;;;;x
+EVTOPTA999385;The Prussian eagle does not back down!;;;;;;;;;;;;;x
 EVTOPTB999385;Abandon Schleswig-Holstein, now!;;;;;;;;;;;;;x
 EVTDESC999386;Seeing that the Prussians have not taken the choice to back down, it is now or never to help the Danes against the Prussian Menace!;;;;;;;;;;;;;x
 EVTNAME999386;The Prussian Menace;;;;;;;;;;;;;x
@@ -1865,38 +1865,38 @@ EVTDESC999390;Diplomats from the newly formed German nation to our North have ar
 EVTNAME999390;The Greater German Question;;;;;;;;;;;;;x
 EVTOPTA999390;Tell them that Germany shall be united!;;;;;;;;;;;;;x
 EVTOPTB999390;Tell them that Austria is not Germany!;;;;;;;;;;;;;x
-EVTDESC999391;The Austrian Empire has accepted our proposal for a enternal union between Germany and Austria. Thus, we have finally achieved the revolution's goals!;;;;;;;;;;;;;x
+EVTDESC999391;The Austrian Empire has accepted our proposal for a eternal union between Germany and Austria. Thus, we have finally achieved the revolution's goals!;;;;;;;;;;;;;x
 EVTNAME999391;Austro-German Unity;;;;;;;;;;;;;x
 EVTOPTA999391;Huzzah!;;;;;;;;;;;;;x
-EVTDESC999392;We have gotten the news that Austria has accepted the unification with the new German state, which will greatly upset the balance of power so sought after in the Concert of Europe. The state is as of right now very weak - thus if we wish to stop them, now is the time to strike!;;;;;;;;;;;;;x
+EVTDESC999392;We have gotten the news that Austria has accepted the unification with the new German state, which will greatly upset the balance of power so sought after in the Concert of Europe. As of right now, the state is very weak - thus if we wish to stop them, now is the time to strike!;;;;;;;;;;;;;x
 EVTNAME999392;The Greater German Problem;;;;;;;;;;;;;x
 EVTOPTA999392;We have better things to do!;;;;;;;;;;;;;x
 EVTOPTB999392;Yes, demand Galicia!;;;;;;;;;;;;;x
 EVTOPTC999392;Yes, demand Galicia and Posen!;;;;;;;;;;;;;x
 EVTOPTD999392;Yes, demand Galicia and that they release all lands outside of the Confederation!;;;;;;;;;;;;;x
 EVTOPTE999392;Yes, declare war we must restore order!;;;;;;;;;;;;;x
-EVTDESC999393;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled for annexation of Austria, demands concessions from us. The concessions are to be of the lands in Galicia, though they are not under our control, would mean that the Russians have access to Hungary. This would limit our expansion there as we still have potential claims there. Refusal to these demands will result in war!;;;;;;;;;;;;;x
+EVTDESC999393;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled-for annexation of Austria, shall be demanding concessions from us. They demand that we recognize their claims over Galicia - although they are not under our control, this would mean that the Russians have direct access to Hungary. This would limit our expansion there as we still have potential claims there. Refusing these demands will likely result in war!;;;;;;;;;;;;;x
 EVTNAME999393;Russians Demand Galicia;;;;;;;;;;;;;x
 EVTOPTA999393;We must accept.;;;;;;;;;;;;;x
 EVTOPTB999393;Come and get it!;;;;;;;;;;;;;x
-EVTDESC999394;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled for annexation of Austria, demands concessions from us. The concessions are to be of the lands in Galicia and Posen, though the former is not under our control, would mean that the Russians have access to Hungary and the loss of the large grain-producing region of Posen. Refusal to these demands will result in war!;;;;;;;;;;;;;x
+EVTDESC999394;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled-for annexation of Austria, shall be demanding concessions from us. They demand that we recognize their claims over Galicia and surrender Posen, giving the Russians direct access to Hungary and the large grain-producing region of Posen. Refusing these demands will likely result in war!;;;;;;;;;;;;;x
 EVTNAME999394;Russians Demand Galicia and Posen;;;;;;;;;;;;;x
 EVTOPTA999394;Accept the demands.;;;;;;;;;;;;;x
 EVTOPTB999394;Come and get it!;;;;;;;;;;;;;x
-EVTDESC999395;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled for annexation of Austria, demands concessions from us. The concessions are to be of the lands in Galicia and all the lands not part of the confederation, pre-unification. This would cost us dearly in power and would give the Russians a clear access road into Europe. Refusal to these demands will result in war!;;;;;;;;;;;;;x
+EVTDESC999395;The Russian ambassador has arrived in Frankfurt today, informing us that the Russian Empire, seeing our uncalled-for annexation of Austria, shall be demanding concessions from us. TThey demand that we recognize their claims over Galicia, and surrender all land outside the borders of the old German Confederation. This would cost us dearly, both in power and prestige, and would give the Russians a clear path into Europe. Refusing these demands will likely result in war!;;;;;;;;;;;;;x
 EVTNAME999395;Russians Demand Pre-Confederation Borders;;;;;;;;;;;;;x
 EVTOPTA999395;Accept the demands.;;;;;;;;;;;;;x
 EVTOPTB999395;Come and get it!;;;;;;;;;;;;;x
-EVTDESC999396;Seeing the uncalled for actions against Austria, the Russian Empire has informed us that they will be taking the burden of restoring order upon themselves and are seeking to dismantle the German nation.;;;;;;;;;;;;;x
+EVTDESC999396;Seeing the uncalled for actions against Austria, the Russian Empire has informed us that they will be taking the burden of restoring order upon themselves and are now seeking to dismantle the German nation.;;;;;;;;;;;;;x
 EVTNAME999396;Russians Declare War!;;;;;;;;;;;;;x
 EVTOPTA999396;The Russian bear strikes again.;;;;;;;;;;;;;x
 EVTDESC999397;The Germans have accepted the Russian demands and a treaty has been writen to enforce these demands. The Russian Empire displays its power.;;;;;;;;;;;;;x
 EVTNAME999397;Treaty of Frankfurt $YEAR$;;;;;;;;;;;;;x
 EVTOPTA999397;Long live the Tsar!;;;;;;;;;;;;;x
-EVTDESC999398;Stating that the Russian demands for territory to restore the balance in the region is not acceptable, the Russian Empire was left with no choice but to put the German nation back into its place.;;;;;;;;;;;;;x
+EVTDESC999398;Stating that the Russian demands for territory to restore the balance in the region is not acceptable, we are left with no choice but to put the German nation back into its place.;;;;;;;;;;;;;x
 EVTNAME999398;German Refusal of Demands;;;;;;;;;;;;;x
-EVTOPTA999398;URA! URA! Next stop Berlin!;;;;;;;;;;;;;x
-EVTDESC999399;The annexation of Austria has lead to a concern of the very large and prominent Czech population in our realm. Some of the delegates have suggested we invite Frantisek Palacky, a Czech nationalist, to attend our parliament to see if we can work out a compromise to ensure Czech loyalty.;;;;;;;;;;;;;x
+EVTOPTA999398;We shall crush their puny rebellion.;;;;;;;;;;;;;x
+EVTDESC999399;The annexation of Austria has lead to much concern of the very large and prominent Czech population in our realm. Some of the delegates have suggested we invite Frantisek Palacky - a major figure in the Czech nationalist movement - to attend our parliament to see if we can work out a compromise to ensure Czech loyalty.;;;;;;;;;;;;;x
 EVTNAME999399;The Czech Question;;;;;;;;;;;;;x
 EVTOPTA999399;No, we will not invite him. This is Germany, not the Kingdom of Bohemia!;;;;;;;;;;;;;x
 EVTOPTB999399;Yes, we will - better a few concessions than outright revolt.;;;;;;;;;;;;;x
