halfway through the tunnel
TODO:
Variable Code
Copais Event Chain
Fantasy Paths
Event Pictures
Some events are unfinished

--- a/TGC/localisation/00_events_1000000000.csv
+++ b/TGC/localisation/00_events_1000000000.csv
@@ -369,3 +369,23 @@ EVTOPTA2000000099;Lets Finish this!;;;;;;;;;;;;;x
 EVTNAME2000000103;Negotiations Failed!;;;;;;;;;;;;;x
 EVTDESC2000000103;Our diplomatic efforts to gain control of a greater part of Hungary have failed miserably. It's now clear that we can't settle this issue peacefully and we'll have to gain what we want the hard way.;;;;;;;;;;;;;x
 EVTOPTA2000000103;Onwards, to war!;;;;;;;;;;;;;x
+EVTNAME2000000104
+EVTNAME2000000105
+EVTNAME2000000106
+EVTNAME2000000107
+EVTNAME2000000108
+EVTNAME2000000109
+EVTNAME2000000110
+EVTNAME2000000111
+EVTNAME2000000112
+EVTNAME2000000113
+EVTNAME2000000114
+EVTNAME2000000115
+EVTNAME2000000116
+EVTNAME2000000117
+EVTNAME2000000118
+EVTNAME2000000119
+EVTNAME2000000120
+EVTNAME2000000121
+EVTNAME2000000122
+EVTNAME2000000123
