--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3622,4 +3622,4 @@ land_registration_system_desc;In an effort to modernize property management and 
 lakekopaisdecision_title;Draining of Lake Kopais: A Chroncile of Perserverance;;;;;;;;;;;;;;x
 lakekopaisdecision_desc;Lake Kopais is surrounded by fertile land, yet it increasingly enchroaches on this land due to inadequate drainage. With enough money we can contract a French company to concentrate an effort into draining it, allowing us to utilize as fertile farmland and increase the power of Greece.;;;;;;;;;;;;;;x
 languagequestiondecision_title;The Greek Language Question.;;;;;;;;;;;;;;x
-languagequestiondecision_desc;The linguistic development of Greek was contrasted by two distinct forms, Demotic Greek and Katharevousa, in order to further the development of Greece on the international stage it is time for us to officialize one in favor of the other.;;;;;;;;;;;;;;x
+languagequestiondecision_desc;The linguistic development of Greek is contrasted by two distinct forms, Demotic Greek and Katharevousa, in order to further the development of Greece on the international stage it is time for us to officialize one in favor of the other.;;;;;;;;;;;;;;x
